# vibe-notch

./: .gitignore  CLAUDE.md  Package.swift  README.md  dev.sh  setup.sh  uninstall.sh
Sources/NotchAgent/: SettingsWindowController.swift  StateWatcher.swift  main.swift
Sources/NotchAgent/Resources/: AppIcon.icns
Sources/VibeNotch/: SettingsWindowController.swift  StateWatcher.swift  main.swift
_tauri_attempt/: index.html.orig  package-lock.json  package.json
_tauri_attempt/src-tauri/: Cargo.toml  tauri.conf.json
_tauri_attempt/src-tauri/src/: lib.rs
docs/superpowers/plans/: 2026-04-23-settings-page.md  2026-04-23-sound-support.md
docs/superpowers/specs/: 2026-04-23-settings-page-design.md  2026-04-23-sound-support-design.md
hooks/: notch-agent-hook.py  notch-agent-hook.sh  vibe-notch-hook.py  watch.sh
scripts/: bundle.sh  install.sh
